# phd_lerer

./: .gitignore  CMakeLists.txt  README.md  build.bat
FileInputConsoleCs/: Program.cs  README.md  build.cmd  run_sample.cmd  sample_input.txt
QtFileInputConsole/: CMakeLists.txt  QtFileInputConsole.pro  README.md  main.cpp  sample_input.txt
article_nonlinear/figures/: fig_scheme.eps
article_nonlinear/scripts/: make_scheme.py
article_os/: README.md
article_os/figures/: fig1.eps  fig2.eps  fig3.eps  fig4.eps  fig5.eps  fig6.eps  fig7.eps
article_os/scripts/: make_figures.py  metrics_for_text.py
composite_ema/: README.md
composite_ema/examples/: README.md  VIBRr.h  ema_models_demo.c  ema_models_demo.py  run_examples.bat  run_examples.ps1
composite_ema/results/: composite_eps_Au_vs_Cu.csv  composite_eps_HfN_vs_TiN.csv  effective_model_comparison_AuCu.csv  effective_model_comparison_AuCu_summary.csv  nonlinear_au_sweep_intensity.csv  nonlinear_au_sweep_spectra.csv  nonlinear_au_sweep_summary.csv  ryasn_chi3_validation.csv  ttm_hot_electron_dynamics.csv  ttm_hot_electron_regimes.csv
composite_ema/scripts/: compare_effective_models.py  composite_ema.py  nonlinear_au_sweep.py  ryasn_chi3_validation.py  ttm_hot_electron.py
composite_ema/source_c/: COMPOSIT.c  COMPOSITE_MODELS.c  EPS_MET_AuAgCu.c
edp/: Ag_.c
edp/metal_strip_w800/: README.md
grating_2d_rcwa/: README.md
grating_2d_rcwa/results/: rcwa_nonlinear_au_absorption.csv  reproduce_fig2_au_vs_cu.csv  reproduce_fig2_au_vs_cu_2d.csv  reproduce_fig5_hfn_vs_tin.csv
grating_2d_rcwa/scripts/: rcwa_1d_te.py  rcwa_2d.py  rcwa_nonlinear_au_absorption.py  reproduce_fig2_au_vs_cu.py  tmm.py  (+5 more)
nanowaveguides/: README.md
newLIb/: ANSWER.C  Bessel.c  CELINEG.C  CELINEG_win.C  COMMON.H  Cel.c  DETCOML.C  DETSIG.C  DETSIG_win.C  Dr_czeid.c  Ellip integral.C  FSKCOM.C  Fun makdon.c  Fun_Bessel.c  Functi.c  Gauss.c  General.c  HERMIT.C  HORKUZ.C  ITERSLA_w.C  In.c  JACOB.C  KVADR_GAU.c  Legendr.c  MAT1D.C  MAT2D.C  MAT4D.c  MATRIX.H  MATRIX_4.h  MBESS.C  MEM1D.C  MEM2D.C  MEMCHK.C  MEMCHK.H  MUL_DIV.C  MUL_DIV_a.c  Mat3d.c  NEW_C.c  New_ kv_Gauss.C  Readme.txt  (+14 more)
opa_pcm/: README.md
vibr_t/: README.md
Полиномы 7_1/: A.c  COMPL FUN.c  E_ext.c  FGrin_dop.c  F_df_2.c  F_df_2_Re.c  F_df_IE_MK.c  F_df_dop.c  Fun mod Bessel.c  Fun.c  R_T_dop.c  VIBR.c  VIBRr.h  V_.c  Vvod.c
(+152 files in other folders)
